cipher:aria: Fix compiler error on NetBSD.

* cipher/aria.c (bswap32): Remove function that conflicts with system
definitions on NetBSD.
(aria_diff_byte): Use _gcry_bswap32.

--

GnuPG-bug-id: 7633
Signed-off-by: Collin Funk <collin.funk1@gmail.com>